# lazytest

./: AGENTS.md  README.md  example.lazytest.toml  main.py  pyproject.toml
lazytest/: __init__.py  app.py  cmake_build.py  cmake_file_api.py  config.py  core_flow.py  ctest_discovery.py  models.py  process_utils.py  search.py  session.py  target_resolution.py  test_runner.py  theme.py
tests/: fixtures.py  test_app.py  test_cmake_file_api.py  test_cmake_file_api_integration.py  test_commands_config.py  test_ctest_discovery.py  test_search.py  test_session_process_flow.py  test_target_resolution.py  test_theme.py
