[project]
name = "lazytest"
version = "0.1.0"
description = "Standalone terminal UI runner for CTest/Catch2 projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.89",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lazytest = "lazytest.app:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.lazytest]
build_dir = "build"
